--- a/jwang/notes2/co-sim_2k.ipynb
+++ b/jwang/notes2/co-sim_2k.ipynb
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.1.post213.dev0+g3a6a3d85\n",
+      "1.7.1.post214.dev0+gb93eafa2\n",
       "2.8.0\n"
      ]
     }
@@ -159,10 +159,10 @@
      "text": [
       "Saved generated pycode to \"/Users/jinningwang/.andes/pycode\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
-      "Generated numerical code for 1 models in 0.1658 seconds.\n",
+      "Generated numerical code for 1 models in 0.2043 seconds.\n",
       "Parsing input file \"/Users/jinningwang/Documents/work/andes/jwang/case/case2000.xlsx\"...\n",
-      "Input file parsed in 0.9071 seconds.\n",
-      "System internal structure set up in 0.0601 seconds.\n"
+      "Input file parsed in 1.4146 seconds.\n",
+      "System internal structure set up in 0.0931 seconds.\n"
      ]
     }
    ],
@@ -346,12 +346,12 @@
       "           Numba: Off\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0044 seconds.\n",
+      "Power flow initialized in 0.0062 seconds.\n",
       "0: |F(x)| = 35.37894339\n",
       "1: |F(x)| = 0.2692108655\n",
       "2: |F(x)| = 0.0002885472789\n",
       "3: |F(x)| = 9.353549046e-10\n",
-      "Converged in 4 iterations in 0.0316 seconds.\n",
+      "Converged in 4 iterations in 0.0470 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n"
      ]
     },
@@ -412,12 +412,12 @@
       "           Numba: Off\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0049 seconds.\n",
+      "Power flow initialized in 0.0076 seconds.\n",
       "0: |F(x)| = 35.37894339\n",
       "1: |F(x)| = 0.2692108655\n",
       "2: |F(x)| = 0.0002885472789\n",
       "3: |F(x)| = 9.353549046e-10\n",
-      "Converged in 4 iterations in 0.0291 seconds.\n",
+      "Converged in 4 iterations in 0.0500 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n",
       "GSF is consistent.\n",
       "/Users/jinningwang/Documents/work/mambaforge/envs/andes/lib/python3.9/site-packages/pandas/core/indexes/base.py:6982: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
@@ -428,6 +428,299 @@
    "source": [
     "ssd = dcopf()\n",
     "ssd.from_andes(ssa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jinningwang/Documents/work/mambaforge/envs/andes/lib/python3.9/site-packages/pandas/core/indexes/base.py:6982: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
+      "  return Index(sequences[0], name=names)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ssd.line.rate_a = 100\n",
+    "ssd.update_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idx</th>\n",
+       "      <th>u</th>\n",
+       "      <th>name</th>\n",
+       "      <th>Sn</th>\n",
+       "      <th>Vn</th>\n",
+       "      <th>bus</th>\n",
+       "      <th>p0</th>\n",
+       "      <th>pmax</th>\n",
+       "      <th>pmin</th>\n",
+       "      <th>v0</th>\n",
+       "      <th>ctrl</th>\n",
+       "      <th>ramp5</th>\n",
+       "      <th>ramp10</th>\n",
+       "      <th>ramp30</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PV 1004</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>1.5825</td>\n",
+       "      <td>1.5825</td>\n",
+       "      <td>1.5825</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PV 1006</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>1006</td>\n",
+       "      <td>0.2573</td>\n",
+       "      <td>0.2573</td>\n",
+       "      <td>0.2573</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PV 1009</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>0.6187</td>\n",
+       "      <td>0.6187</td>\n",
+       "      <td>0.6187</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PV 1011</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1011</td>\n",
+       "      <td>0.0997</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PV 1021</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>1021</td>\n",
+       "      <td>1.4963</td>\n",
+       "      <td>1.4963</td>\n",
+       "      <td>1.4963</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>541</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PV 8155</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>8155</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.746</td>\n",
+       "      <td>0.5238</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>542</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PV 8155</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>8155</td>\n",
+       "      <td>1.7412</td>\n",
+       "      <td>1.746</td>\n",
+       "      <td>0.5238</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541</th>\n",
+       "      <td>543</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PV 8158</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>8158</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>0.315</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>544</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PV 8158</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>8158</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.982</td>\n",
+       "      <td>0.2946</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>379</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Slack 7098</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>7098</td>\n",
+       "      <td>12.361</td>\n",
+       "      <td>13.543</td>\n",
+       "      <td>4.0629</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>544 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     idx    u        name     Sn     Vn   bus      p0    pmax    pmin    v0  \\\n",
+       "0      1  1.0     PV 1004  100.0  230.0  1004  1.5825  1.5825  1.5825  1.01   \n",
+       "1      2  1.0     PV 1006  100.0   13.8  1006  0.2573  0.2573  0.2573   1.0   \n",
+       "2      3  1.0     PV 1009  100.0   13.8  1009  0.6187  0.6187  0.6187   1.0   \n",
+       "3      4  1.0     PV 1011  100.0   22.0  1011  0.0997     0.1    0.03   1.0   \n",
+       "4      5  1.0     PV 1021  100.0   13.8  1021  1.4963  1.4963  1.4963   1.0   \n",
+       "..   ...  ...         ...    ...    ...   ...     ...     ...     ...   ...   \n",
+       "539  541  0.0     PV 8155  100.0  500.0  8155     0.0   1.746  0.5238   1.0   \n",
+       "540  542  1.0     PV 8155  100.0  500.0  8155  1.7412   1.746  0.5238   1.0   \n",
+       "541  543  0.0     PV 8158  100.0  500.0  8158     0.0    1.05   0.315   1.0   \n",
+       "542  544  0.0     PV 8158  100.0  500.0  8158     0.0   0.982  0.2946   1.0   \n",
+       "543  379  1.0  Slack 7098  100.0   13.8  7098  12.361  13.543  4.0629   1.0   \n",
+       "\n",
+       "     ctrl  ramp5  ramp10  ramp30  \n",
+       "0       1    100     200     600  \n",
+       "1       1    100     200     600  \n",
+       "2       1    100     200     600  \n",
+       "3       1    100     200     600  \n",
+       "4       1    100     200     600  \n",
+       "..    ...    ...     ...     ...  \n",
+       "539     1    100     200     600  \n",
+       "540     1    100     200     600  \n",
+       "541     1    100     200     600  \n",
+       "542     1    100     200     600  \n",
+       "543     1    100     200     600  \n",
+       "\n",
+       "[544 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssd.gen"
    ]
   },
   {
