Test co-sim on 2k

--- a/jwang/notes2/test_pp.ipynb
+++ b/jwang/notes2/test_pp.ipynb
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.1.post214.dev0+gb93eafa2\n",
+      "1.7.1.post217+g98f65dff\n",
       "2.8.0\n"
      ]
     }
@@ -116,10 +116,10 @@
      "text": [
       "Saved generated pycode to \"/Users/jinningwang/.andes/pycode\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
-      "Generated numerical code for 1 models in 0.3712 seconds.\n",
+      "Generated numerical code for 1 models in 0.4546 seconds.\n",
       "Parsing input file \"/Users/jinningwang/Documents/work/andes/jwang/case/case2000.xlsx\"...\n",
-      "Input file parsed in 1.5020 seconds.\n",
-      "System internal structure set up in 0.0981 seconds.\n"
+      "Input file parsed in 1.9849 seconds.\n",
+      "System internal structure set up in 0.0909 seconds.\n"
      ]
     }
    ],
@@ -154,12 +154,12 @@
       "           Numba: Off\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0082 seconds.\n",
+      "Power flow initialized in 0.0072 seconds.\n",
       "0: |F(x)| = 35.37894339\n",
       "1: |F(x)| = 0.2692108655\n",
       "2: |F(x)| = 0.0002885472789\n",
       "3: |F(x)| = 9.353549046e-10\n",
-      "Converged in 4 iterations in 0.0604 seconds.\n",
+      "Converged in 4 iterations in 0.0587 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n"
      ]
     },
@@ -198,7 +198,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67109.20999979675"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssp.res_cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,12 +242,12 @@
       "           Numba: Off\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0092 seconds.\n",
+      "Power flow initialized in 0.0063 seconds.\n",
       "0: |F(x)| = 35.37894339\n",
       "1: |F(x)| = 0.2692108655\n",
       "2: |F(x)| = 0.0002885472789\n",
       "3: |F(x)| = 9.353549046e-10\n",
-      "Converged in 4 iterations in 0.0514 seconds.\n",
+      "Converged in 4 iterations in 0.0461 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n",
       "GSF is consistent.\n",
       "/Users/jinningwang/Documents/work/mambaforge/envs/andes/lib/python3.9/site-packages/pandas/core/indexes/base.py:6982: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
@@ -242,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +303,7 @@
       "       0    6.7109210e+02   0.000000e+00   0.000000e+00      0s\n",
       "\n",
       "Solved with dual simplex\n",
-      "Solved in 0 iterations and 0.02 seconds (0.01 work units)\n",
+      "Solved in 0 iterations and 0.04 seconds (0.01 work units)\n",
       "Optimal objective  6.710921000e+02\n"
      ]
     },
@@ -397,7 +417,7 @@
        "[544 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
