--- a/jwang/notes2/test_dc_2k.ipynb
+++ b/jwang/notes2/test_dc_2k.ipynb
@@ -18,10 +18,11 @@
    "outputs": [],
    "source": [
     "import andes\n",
-    "from andes.interop.pandapower import to_pandapower, make_GSF, add_gencost\n",
+    "from andes.interop.pandapower import to_pandapower, build_group_table, make_GSF, add_gencost, make_link_table\n",
     "import pandapower as pp\n",
     "import numpy as np\n",
     "\n",
+    "import pandas as pd\n",
     "from jams import rted2, dcopf, rted3"
    ]
   },
@@ -34,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.1.post221.dev0+gaf37d336\n",
+      "1.7.1.post222.dev0+gaf52e064\n",
       "2.8.0\n"
      ]
     }
@@ -85,20 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- conversion ---\n",
     "ssp = to_pandapower(ssa)\n",
@@ -114,255 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2023-04-08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jinningwang/Documents/work/mambaforge/envs/andes/lib/python3.9/site-packages/pandas/core/indexes/base.py:6982: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
-      "  return Index(sequences[0], name=names)\n",
-      "/Users/jinningwang/Documents/work/mambaforge/envs/andes/lib/python3.9/site-packages/pandas/core/indexes/base.py:6982: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
-      "  return Index(sequences[0], name=names)\n",
-      "Successfully build DCOPF model.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (mac64[arm])\n",
-      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 4691 rows, 544 columns and 70894 nonzeros\n",
-      "Model fingerprint: 0xbd48f389\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e-07, 1e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [4e-03, 1e+01]\n",
-      "  RHS range        [7e+02, 1e+04]\n",
-      "\n",
-      "Concurrent LP optimizer: primal simplex, dual simplex, and barrier\n",
-      "Showing barrier log only...\n",
-      "\n",
-      "Presolve removed 4691 rows and 544 columns\n",
-      "Presolve time: 0.01s\n",
-      "Presolve: All rows and columns removed\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    6.7109235e+02   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved with dual simplex\n",
-      "Solved in 0 iterations and 0.01 seconds (0.01 work units)\n",
-      "Optimal objective  6.710923500e+02\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Successfully solve DCOPF.\n",
-      "Successfully set p_pre from DCOPF results.\n",
-      "No RegUp requirement data (``du``), set to 0.\n",
-      "No RegDn requirement data (``dd``), set to 0.\n",
-      "/Users/jinningwang/Documents/work/mambaforge/envs/andes/lib/python3.9/site-packages/pandas/core/indexes/base.py:6982: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
-      "  return Index(sequences[0], name=names)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (mac64[arm])\n",
-      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 6869 rows, 1632 columns and 75246 nonzeros\n",
-      "Model fingerprint: 0x62423fe9\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e-07, 1e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [4e-03, 1e+01]\n",
-      "  RHS range        [4e-03, 1e+04]\n",
-      "\n",
-      "Concurrent LP optimizer: primal simplex, dual simplex, and barrier\n",
-      "Showing barrier log only...\n",
-      "\n",
-      "Presolve time: 0.01s\n",
-      "\n",
-      "Solved with dual simplex\n",
-      "Solved in 0 iterations and 0.01 seconds (0.00 work units)\n",
-      "Infeasible model\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "RTED has no valid resutls!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gen</th>\n",
-       "      <th>pg</th>\n",
-       "      <th>pru</th>\n",
-       "      <th>prd</th>\n",
-       "      <th>bu</th>\n",
-       "      <th>bd</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>539</th>\n",
-       "      <td>541</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>540</th>\n",
-       "      <td>542</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541</th>\n",
-       "      <td>543</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>542</th>\n",
-       "      <td>544</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>543</th>\n",
-       "      <td>379</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>544 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     gen  pg  pru  prd   bu   bd\n",
-       "0      1   0    0    0  0.0  0.0\n",
-       "1      2   0    0    0  0.0  0.0\n",
-       "2      3   0    0    0  0.0  0.0\n",
-       "3      4   0    0    0  0.0  0.0\n",
-       "4      5   0    0    0  0.0  0.0\n",
-       "..   ...  ..  ...  ...  ...  ...\n",
-       "539  541   0    0    0  0.0  0.0\n",
-       "540  542   0    0    0  0.0  0.0\n",
-       "541  543   0    0    0  0.0  0.0\n",
-       "542  544   0    0    0  0.0  0.0\n",
-       "543  379   0    0    0  0.0  0.0\n",
-       "\n",
-       "[544 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ssd = rted2()\n",
     "ssd.from_andes(ssa)\n",
